jck test fails with C2: vm/jvmti/FollowReferences/fref001/fref00113/fref00113.html

XMLWordPrintable

    • b22

        Executing the tests with -Xcomp -Xbatch -XX:ReservedCodeCacheSize=512M -XX:-TieredCompilation we see this test failing.

        Find the .jtr file illustrating the failure attached.

        It fails on all the platforms we test (linux ppc64 ppc64le s390 x86_64, windows x86_64 and x86_32, aix, solaris, mac). I see the failures for months in our nightly tests of jdk/jdk. It passes in a regular run and if we force C1 compilation. Over this timeframe, we updated the jck test suite several times.

        Command line:

         -Djava.awt.headless=true -Xms128m -Xmx288m -XX:MaxJavaStackTraceDepth=1024 -Xverify:all -XX:+FailOverToOldVerifier -Xfuture -agentlib:jckjvmti=same -Xss4M -Xcomp -Xbatch -XX:ReservedCodeCacheSize=512M -XX:-TieredCompilation -XX:+PrintCodeCache -Djdk.xml.maxXMLNameLimit=4000 -Djava.net.preferIPv4Stack=true -Djava.security.auth.policy=.../JCK-runtime-11/lib/jck.auth.policy -Djava.security.auth.login.config=.../JCK-runtime-11/lib/jck.auth.login.config -Djava.security.policy=.../JCK-runtime-11/lib/jck.policy -Djava.io.tmpdir=.../jck_lang_vm_c2_work/tempdir -Djavatest.security.allowPropertiesAccess=true -Djava.util.prefs.userRoot=.../jck_lang_vm_c2_work/tempdir -classpath .../JCK-runtime-11/lib/javatest.jar:.../JCK-runtime-11/tests.../JCK-runtime-11/classes:.../JCK-runtime-11/lib/extensions/JCK-extensions.jar: -Djava.rmi.activation.port=6264 com.sun.javatest.agent.AgentMain -active -activeHost localhost -activePort 6564

          1. fref00113.jtr
            3 kB
            Goetz Lindenmaier

              Assignee:
              Paul Sandoz
              Reporter:
              Goetz Lindenmaier
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: