8202769: jck test fails with C2: vm/jvmti/FollowReferences/fref001/fref00113/fref00113.html

Reviewed-by: kvn, coleenp